feat: production-ready release with Netlify Functions
- Implement direct Netlify Function URLs for reliable API calls
- Fix static asset loading with absolute paths
- Add comprehensive deployment documentation
- Enhance UI with cyberpunk animations and GitHub icon
- Resolve all redirect and routing issues
- Update semantic versioning to 2.2.0

Deployment ready for:
✅ Netlify Functions (full functionality)
✅ GitHub Pages (demo mode)
✅ Local development

--- a/public/404.html
+++ b/public/404.html
@@ -63,7 +63,7 @@
         <div class="error-message">
             The page you're looking for doesn't exist in the sitemap.
         </div>
-        <a href="/" class="home-link">Return Home</a>
+        <a href="/" class="home-link">Return True</a>
     </div>
     
     <script>
