feat(semver): add semver tools and git commit message tags
- Install standard-version, commitlint, and husky
- Add release scripts to package.json
- Configure commit message template and validation
- Set up git hooks for testing and commit message validation

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CrawlMapper - Sitemap Content Search Tool</title>
     <link rel="stylesheet" href="/css/styles.css">
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -90,7 +91,7 @@
 
                 <div class="results-actions">
                     <button id="newSearchBtn" class="action-btn">New Search</button>
-                    <button id="exportBtn" class="action-btn">Export Results</button>
+                    <button id="exportBtn" class="action-btn">Export CSV</button>
                 </div>
             </div>
 
